force-app/main/default/objects/Legal_Opini__c/Legal_Opini__c.object-meta.xml
<CustomObject>
    <label>Legal Opini</label>
    <nameField>
        <label>Legal Opini Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legal Opini</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>