force-app/main/default/objects/Legal_Opini__c/fields/Analisa_Jaminan_1__c.field-meta.xml
<CustomField>
    <fullName>Analisa_Jaminan_1__c</fullName>
    <label>Analisa Jaminan 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>