force-app/main/default/objects/Legal_Opini__c/fields/Analisa_SIPP__c.field-meta.xml
<CustomField>
    <fullName>Analisa_SIPP__c</fullName>
    <label>Analisa SIPP</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>