force-app/main/default/objects/Legal_Opini__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Legal Opini</relationshipLabel>
    <relationshipName>Legal_Opini</relationshipName>
    <type>Lookup</type>
</CustomField>