force-app/main/default/objects/Legal_Opini__c/fields/Is_Legal_Opini_Complete__c.field-meta.xml
<CustomField>
    <fullName>Is_Legal_Opini_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Legal Opini Complete</label>
    <type>Checkbox</type>
</CustomField>