force-app/main/default/objects/Legal_Opini__c/fields/Is_LO_Document_Checklist_Complete__c.field-meta.xml
<CustomField>
    <fullName>Is_LO_Document_Checklist_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is LO Document Checklist Complete</label>
    <type>Checkbox</type>
</CustomField>