force-app/main/default/objects/Legal_Opini__c/fields/Jabatan_2__c.field-meta.xml
<CustomField>
    <fullName>Jabatan_2__c</fullName>
    <label>Jabatan 2</label>
    <type>TextArea</type>
</CustomField>