force-app/main/default/objects/Legal_Opini__c/fields/Jangka_Waktu__c.field-meta.xml
<CustomField>
    <fullName>Jangka_Waktu__c</fullName>
    <label>Jangka Waktu</label>
    <type>TextArea</type>
</CustomField>