force-app/main/default/objects/Legal_Opini__c/fields/Jangka_waktu_jabatan_1__c.field-meta.xml
<CustomField>
    <fullName>Jangka_waktu_jabatan_1__c</fullName>
    <label>Jangka waktu jabatan 1</label>
    <type>TextArea</type>
</CustomField>