force-app/main/default/objects/Legal_Opini__c/fields/Jumlah_Rupiah_pemegang_saham_1__c.field-meta.xml
<CustomField>
    <fullName>Jumlah_Rupiah_pemegang_saham_1__c</fullName>
    <label>Jumlah Rupiah pemegang saham 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>