force-app/main/default/objects/Legal_Opini__c/fields/Jumlah_saham_2__c.field-meta.xml
<CustomField>
    <fullName>Jumlah_saham_2__c</fullName>
    <label>Jumlah saham 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>