force-app/main/default/objects/Legal_Opini__c/fields/Jumlah_Saham__c.field-meta.xml
<CustomField>
    <fullName>Jumlah_Saham__c</fullName>
    <formula>Jumlah_saham_1__c + Jumlah_saham_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Jumlah Saham</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>