force-app/main/default/objects/Legal_Opini__c/fields/Keterangan_NIB__c.field-meta.xml
<CustomField>
    <fullName>Keterangan_NIB__c</fullName>
    <label>Keterangan NIB</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sesuai_Tidak_Sesuai</valueSetName>
    </valueSet>
</CustomField>