force-app/main/default/objects/Legal_Opini__c/fields/Keterangan_NPWP__c.field-meta.xml
<CustomField>
    <fullName>Keterangan_NPWP__c</fullName>
    <label>Keterangan NPWP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sesuai_Tidak_Sesuai</valueSetName>
    </valueSet>
</CustomField>