force-app/main/default/objects/Legal_Opini__c/fields/Keterangan_Perolehan_jaminan__c.field-meta.xml
<CustomField>
    <fullName>Keterangan_Perolehan_jaminan__c</fullName>
    <label>Keterangan Perolehan jaminan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>