force-app/main/default/objects/Legal_Opini__c/fields/Nama_2__c.field-meta.xml
<CustomField>
    <fullName>Nama_2__c</fullName>
    <label>Nama 2</label>
    <type>TextArea</type>
</CustomField>