force-app/main/default/objects/Legal_Opini__c/fields/Nomor_Akta_Nikah__c.field-meta.xml
<CustomField>
    <fullName>Nomor_Akta_Nikah__c</fullName>
    <label>Nomor Akta Nikah</label>
    <type>TextArea</type>
</CustomField>