force-app/main/default/objects/Legal_Opini__c/fields/Nomor_KK_Pasangan__c.field-meta.xml
<CustomField>
    <fullName>Nomor_KK_Pasangan__c</fullName>
    <label>Nomor KK Pasangan</label>
    <type>TextArea</type>
</CustomField>