force-app/main/default/objects/Legal_Opini__c/fields/Nomor_Legal_Opini__c.field-meta.xml
<CustomField>
    <fullName>Nomor_Legal_Opini__c</fullName>
    <label>Nomor Legal Opini</label>
    <type>TextArea</type>
</CustomField>