force-app/main/default/objects/Legal_Opini__c/fields/Nomor_Surat_ukur__c.field-meta.xml
<CustomField>
    <fullName>Nomor_Surat_ukur__c</fullName>
    <label>Nomor Surat ukur</label>
    <type>TextArea</type>
</CustomField>