force-app/main/default/objects/Legal_Opini__c/fields/Sumber_kewenangan_direksi__c.field-meta.xml
<CustomField>
    <fullName>Sumber_kewenangan_direksi__c</fullName>
    <label>Sumber kewenangan direksi</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>