force-app/main/default/objects/Legal_Opini__c/fields/Susunan_Direksi__c.field-meta.xml
<CustomField>
    <fullName>Susunan_Direksi__c</fullName>
    <label>Susunan Direksi</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>